scribble/scribble-assertions/src/test/resources/good/extensions/assrtcore/safety/assrtprog/AssrtCoreTest16a.scr
module good.extensions.assrtcore.safety.assrtprog.AssrtCoreTest16a;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B) @"<x:=1>"
{
	1(y:int) from A to B; @"(y>3)"
	do Proto1(A, B); @"<y>"
}
//*/
