scribble/scribble-assertions/src/test/resources/bad/extensions/assrtcore/safety/assrtprog/statevar/AssrtCoreTest08c.scr
module bad.extensions.assrtcore.safety.assrtprog.statevar.AssrtCoreTest08c;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B) @"<x:=3>" //x>2"
{
	1() from A to B; @"(x>2)"
	do Proto1(A, B); @"<(x+1)>"
}
//*/
